fix reel height variation, resources spacing

--- a/newamericadotorg/assets/scss/pages/home/_panels.scss
+++ b/newamericadotorg/assets/scss/pages/home/_panels.scss
@@ -63,12 +63,16 @@
 }
 
 .home__reel {
-  > * {
-    height: 475px;
+  > *:nth-child(2) {
+    height: 90px;
   }
+
   @include media-breakpoint(tablet){
     height: 475px;
     overflow: hidden;
+    > * {
+      height: 475px !important;
+    }
   }
 }
 
@@ -139,11 +143,6 @@
       margin-left: -15px;
       max-width: 800px;
       height: auto;
-
-      &.grayscale {
-        -webkit-filter: grayscale(40%); /* Safari 6.0 - 9.0 */
-          filter: grayscale(40%);
-      }
 
       @include media-breakpoint(tablet){
         width: calc(100% + 15px);
